upgraded to Rails 3.1
largely cargo-culted from existing extensions (which were converted by
@mrreynolds)

note that even though this extension does not have any assets of its
own, in stand-alone mode the iQvoc framework's assets are still being
used, requiring the asset pipeline to be configured

--- a/config/locales/activerecord.de.yml
+++ b/config/locales/activerecord.de.yml
@@ -1,7 +1,6 @@
 de:
   activerecord:
     models:
-      inflectional:
-        base:
-          one:   "Schreibweise"
-          other: "Schreibweisen"
+      inflectional/base:
+        one:   Schreibweise
+        other: Schreibweisen
